Gliederung der funktionalen Anforderungen geändert.

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -212,9 +212,14 @@ Die Ziele dieses Projektes lassen sich in drei Bereiche gliedern:
       \item[/F200/] \textsf{Zählmodus:} Zählen von Liegestützen oder Sit-ups. %%(Sitz-auf)
       \item[/F210/] \textsf{Start/Stopp Musikmodus:} Musik stoppt wenn Nutzer stehen bleibt, läuft wenn der Nutzer läuft.
       %%Weitere Funktionen von lauschen&agieren anders Gliedern?
-      \item[/F220/] \textsf{Modus Lauschen\&Agieren:} Zusammenstellen eines Trainingsablaufs (Liegestütze, Sit-ups, Laufen). 
-      \item[/F230/] \textsf {Modus Lauschen\&Agieren:} Sprachanweisungen für die nächste Übung während des Trainings.
-      \item[/F240/] \textsf {Modus Lauschen\&Agieren:} Anzeige der Zeitdauer jeder Übung nach Ablaufsende, siehe F130.
+      \item[/F220/]{
+        Modus \glqq Lauschen\&Agieren\grqq
+        \begin{itemize}
+          \item[/F221/] Zusammenstellen eines Trainingsablaufs (Liegestütze, Sit-ups, Laufen). 
+          \item[/F222/] Sprachanweisungen für die nächste Übung während des Trainings.
+          \item[/F223/] Anzeige der Zeitdauer jeder Übung nach Ablaufsende, siehe F130.
+        \end{itemize}
+      }
       \item[/F250/] \textsf {Einstellungen:} Der Nutzer kann seinen Namen abgeben und ändern.
       \item[/F260/] \textsf {Einstellungen:} Der Nutzer kann die Sprache der App anpassen.
       \item[/F270/] \textsf {Einstellungen:} Der Nutzer kann die gespeicherten Trainingsdaten löschen.
